# rclone-sync-cosmic-applet

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
resources/: app.desktop  app.metainfo.xml
scripts/: install-cosmic-applet-local.sh
src/: applet.rs  cli.rs  job_config.rs  main.rs  notify.rs  open.rs  runner.rs  status.rs  systemd.rs
