[package]
name = "rclone_sync_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
notify-rust = "4.11.7"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
  "applet",
  "applet-token",
  "dbus-config",
  "multi-window",
  "tokio",
  "wayland",
  "winit",
]
